kustomize/overlays/alpha/fintlabs-no/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fint-core-consumer-administrasjon-personal
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`alpha.felleskomponent.no`) && (PathPrefix( `/administrasjon/personal`) && Headers(`x-org-id`, `fintlabs.no`)"
      kind: Rule
      services:
        - name: fint-core-consumer-administrasjon-personal
          port: 8080
